<resources>
    <string name="app_name">Inventory App</string>
    <string name="ProductName"> </string>
    <string name="ProductPrice">Product Price: </string>
    <string name="ViewAll">View All</string>
    <string name="Add">Add</string>

    <string name="title_activity_inventory">inventory_activity</string>
    <string name="redirecttext">Already a user? Login</string>
    <string name="signup">Sign Up</string>
    <string name="ConfirmPass">Confirm Password</string>
    <string name="Password">Password</string>
    <string name="email">Email</string>
    <string name="redirect2">Not yet registered? Signup</string>
    <string name="login2">login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="open_nav_bar">Open Navigation Drawer</string>
    <string name="close_nav_bar">Close Navigation Drawer</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet senectus et netus et

    </string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="inventory">Inventory</string>
    <string name="sales">Sales</string>
    <string name="settings">Settings</string>
    <string name="Search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_1">Home</string>
    <string name="sales_1">Sales</string>
    <string name="inventory_1">Inventory</string>
    <string name="quantity">Product Quantity</string>
    <string name="generate_Invent_report">Generate Inventory Report</string>
    <string name="name2">"Name: "</string>
    <string name="price2">"Price: "</string>
    <string name="quantity2">"Quantity: "</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="id">id</string>
    <string name="p_quantity">Product Quantity: </string>
    <string name="item_n">Item Name: </string>
    <string name="item_p">Item Price: </string>
    <string name="item_q">Item Quantity: </string>
    <string name="login_n">Log in</string>
    <string name="sign_n">Sign up</string>
    <string name="Current_invent">Current Inventory Level</string>
</resources>