<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="12dp"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="12dp"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="12dp"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="12dp"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:text="TextView" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="12dp"
        android:text="@string/update" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="12dp"
        android:text="@string/delete" />

    <Button
        android:id="@+id/btn_sales"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="12dp"
        android:text="@string/sales" />
</LinearLayout>